syntax = "proto3";

option csharp_namespace = "GrpcService1";

package movie;


message MovieGRPC {
  string id = 1;
  string title = 2;
  string year = 3;
  string reted = 4;
  string released = 5;
  string runtime = 6;
  string director = 7;
}


service MovieServiceGRPC {
  rpc GetMovie (MovieRequest) returns (MovieResponse);
  rpc CreateMovie (CreateMovieRequest) returns (CreateMovieResponse);
}

message CreateMovieRequest {
  MovieGRPC movie=1;
}
message CreateMovieResponse {
  string id = 1;
}
message MovieRequest {
  string id = 1;
}

message MovieResponse {
  MovieGRPC movie=1;
}